--- a/Math-Aid/style.css
+++ b/Math-Aid/style.css
@@ -1,80 +1,81 @@
 body{
-
-    background-color: rgb(2, 2, 22) !important;
-}
-
-@media (max-width: 768px) { 
-  .col-sm-6{
-    width: 100%;
-  }
+    background-color: #090427 !important;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 .mainImg{
     max-height: 600px;
     width: 100%;
 }
-.row, .cardT, .cardt{
+
+.Logo
+{
+    max-height: 80px;
+    width: 80%;
+    background-color: transparent;
     margin: 0 !important;
     padding: 0 !important;
-   
 }
-/*Footer*/
-.footerSub{
-    margin-left: 10%;
-    margin-right: 10%;
-    padding-bottom: 2%;
-    padding-top: 2%;
-}
+
 a{
     text-decoration: none !important;
+    color: rgb(255, 255, 255) !important;
+    font-size: larger;
 }
 .card{
     padding: 5%;
-    min-height: 250px;
+    min-height:150px;
     border-style: none !important;
     margin: 5%;
 }
 #Sub-section, #About_Us, #Services{
     padding: 5%;
-    color: white !important;
+    color:#090427 !important;
 }
 .fab{
     color: rgb(34, 100, 161);
     padding-left: 10px;
 }
+.bg-white
+{
+    background-color: na;
+}
 
 /*Contact us form*/
 .contactSection {
-    background: rgba(224, 224, 224, 0.911);
-    margin-left: 1%;
-    margin-right: 1%;
-    padding-bottom: 10%;
-    padding-top: 6%;
+    background-image: url('./pictures/3.png');
+    margin: 0 !important;
+
+}
+.newS{
+    background-color: #090427e5 !important;
+    min-height: inherit !important;
+}
+.subContact{
+    padding: 5%;
+    padding-bottom: 0 !important;
+    text-align: center;
+    color:yellow;
     transition: 1s;
 }
-    #cardLeft {
-        background-color: rgba(0, 98, 128, 0);
-        border-radius: 5px;
-    }
-    .subContact {
-        padding: 5%;
-        padding-bottom: 0 !important;
-        text-align: center;
-        color: rgba(39, 39, 39, 0.884);
-        transition: 1s;
-    }
-    .col-sm-6 {
+
+    .col-sm-7 {
         padding-bottom: 4%;
         transition: 1s;
+        border-radius: 20px !important;
     }
     .form-control {
-        background-color: rgba(65, 65, 65, 0);
+        background-color: #f8f8f800 !important;
         border-top: none;
         border-left: none;
         border-right: none;
         border-radius: 0;
-        padding: 3%;
+        padding: 2% !important;
         color: rgb(0, 111, 175);
-        border-color: rgba(66, 66, 66, 0.24);
+        border-color: yellow;
+        border-left: none !important;
+        border-right: none !important;
+        border-top: none !important;
     }
     #exampleFormControlTextarea1 {
         width: 100% !important;
@@ -87,8 +88,15 @@ a{
         border-color: rgba(34, 34, 34, 0.205);
         padding: 3%;
     }
-    h2{
-        color: rgba(0, 98, 128, 0.884);
+    h1,  h3{
+        color:yellow;
+
+    }
+    h2, p{
+       color:  rgb(255, 255, 255) !important;
+    }
+    h4{
+        color:  rgb(255, 255, 255) !important;
     }
     .btn .btn-primary{
         width: 100% !important;
@@ -100,6 +108,7 @@ a{
     .row {
         padding-right: 5%;
         padding-left: 5%;
+        margin: 0 !important;
     }
     #emailSub {
         background-color: rgba(255, 255, 255, 0.959);
@@ -120,8 +129,37 @@ a{
         /* Microsoft Edge */
         color: rgb(48, 48, 48);
     }
-    #IconContact{
-        background-color: rgb(190, 190, 190) !important;
-        border-radius: 5px;
-        box-shadow: 1px 1px 20px 0px rgb(134, 134, 134);
+ 
+/*Footer*/
+.footerSub{
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 1%;
+    padding-top: 2%;
+}
+.row, .cardT, .cardt{
+    margin: 0 !important;
+    padding: 0 !important; 
+    color:  rgb(0, 0, 0) !important;
+}
+.carousel-caption{
+    height: 440px;
+}
+.mainTitle{
+    font-size: 70px !important;
+}
+.btn{
+
+    padding: 1% !important;
+    padding-left: 5% !important;
+    padding-right: 5% !important;
+    margin-top: 5px;
+    border-radius: 100px !important;
+    
+}
+
+@media (max-width: 768px) { 
+    .col-sm-6{
+      width: 100%;
     }
+}
